--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       :root {
         --player-accent-color: #94e0b2;
       }
+      .card-background {
+        background-color: #141f18; /* Màu nền mặc định */
+      }
       .player-button-text {
         color: var(--player-accent-color);
       }
