--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       onload="this.rel='stylesheet'"
       href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Spline+Sans%3Awght%40400%3B500%3B700"
     />
-    <title>Stitch Design</title>
+    <title>Music Card Generator</title>
     <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
 
     <!-- Tailwind CSS CDN -->
